--- a/src/Components/Style/Style.css
+++ b/src/Components/Style/Style.css
@@ -1,7 +1,14 @@
 .border-dot {
-  border: 1px dotted gray;
+  border: 1px dashed rgb(223, 223, 223);
 }
 .style-nav:hover {
   background-color: gray;
 }
 
+.button {
+  background-color: #2eacaa;
+  font-size: 13px;
+}
+.button:hover {
+  background-color: #2eacaa;
+}
